Minor source reformatting.